Created Tab structure by inputing container divs
the buttons select the correct container div for upcoming content

--- a/src/template.html
+++ b/src/template.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <header>
-      <nav>
-        <button>Home</button>
-        <button>Menu</button>
-        <button>About</button>
+      <nav id="nav">
+        <button id="home">Home</button>
+        <button id="menu">Menu</button>
+        <button id="about">About</button>
       </nav>
     </header>
     <div id="content"></div>
